--- a/dot_config/hypr/overrides.conf
+++ b/dot_config/hypr/overrides.conf
@@ -16,7 +16,7 @@ bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.
 unbind = SUPER SHIFT, E
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://mail.google.com"
 unbind = SUPER SHIFT, M
-bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-webapp "https://music.youtube.com/"
+bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-webapp "https://music.youtube.com"
 
 # Input
 
